--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>¡Viaje a Madrid - CEIP Mariano Aroca!</title>
+  <title>Viaje CEIP Mariano Aroca - Museo del Prado</title>
   <style>
     body {
       margin: 0;
@@ -15,13 +15,13 @@
     }
 
     h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       margin-top: 30px;
       text-shadow: 2px 2px 10px rgba(0,0,0,0.4);
     }
 
     h2 {
-      font-size: 1.5rem;
+      font-size: 1.4rem;
       color: #ffeb3b;
       margin-bottom: 30px;
     }
@@ -101,7 +101,21 @@
 </head>
 <body>
 
-  <h1>¡Viaje a Madrid!</h1>
+  <h1>🎮 Minijuego: ¿Cuánto sabes del Museo del Prado?</h1>
+  <div id="quiz-container">
+    <p id="question">Cargando pregunta...</p>
+    <div id="answers"></div>
+    <p id="result"></p>
+    <button onclick="nextQuestion()">Siguiente</button>
+  </div>
+
+  <div class="art-section">
+    <h2>🖼️ Obra destacada del Museo del Prado</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Las_Meninas_01.jpg/800px-Las_Meninas_01.jpg" alt="Las Meninas de Velázquez">
+    <div class="art-caption"><strong>Las Meninas</strong> – Diego Velázquez (1656)</div>
+  </div>
+
+  <h1>🕒 Cuenta Regresiva para el Gran Viaje</h1>
   <h2>CEIP Mariano Aroca - 6º Curso</h2>
   <div id="countdown">Cargando cuenta atrás...</div>
 
@@ -110,28 +124,15 @@
     Hora española (UTC+2). ¡Qué emoción!
   </footer>
 
-  <div class="art-section">
-    <h2>🖼️ Obra destacada del Museo del Prado</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Las_Meninas_01.jpg/800px-Las_Meninas_01.jpg" alt="Las Meninas de Velázquez">
-    <div class="art-caption"><strong>Las Meninas</strong> – Diego Velázquez (1656)</div>
-  </div>
-
-  <div id="quiz-container">
-    <h2>🎮 Minijuego: ¿Cuánto sabes del Museo del Prado?</h2>
-    <p id="question">Cargando pregunta...</p>
-    <div id="answers"></div>
-    <p id="result"></p>
-    <button onclick="nextQuestion()">Siguiente</button>
-  </div>
-
   <script>
+    // Contador
     function updateCountdown() {
       const now = new Date();
       const nowUTC = new Date(now.getTime() + now.getTimezoneOffset() * 60000);
       const currentMonth = now.getMonth();
       const currentYear = now.getFullYear();
+      let targetDate = new Date(Date.UTC(currentYear, currentMonth, 20, 5, 0, 0)); // 7 AM en España = 5 UTC
 
-      let targetDate = new Date(Date.UTC(currentYear, currentMonth, 20, 5, 0, 0));
       if (nowUTC > targetDate) {
         targetDate = new Date(Date.UTC(currentYear, currentMonth + 1, 20, 5, 0, 0));
       }
@@ -163,20 +164,21 @@
     setInterval(updateCountdown, 1000);
     updateCountdown();
 
+    // Quiz
     const quiz = [
-      {
-        question: "¿En qué ciudad está el Museo del Prado?",
-        answers: ["Sevilla", "Madrid", "Barcelona", "Granada"],
-        correct: 1
-      },
       {
         question: "¿Quién pintó 'Las Meninas'?",
         answers: ["Goya", "Velázquez", "Picasso", "Sorolla"],
         correct: 1
       },
       {
-        question: "¿Qué estilo artístico se encuentra mucho en el Prado?",
-        answers: ["Cubismo", "Barroco", "Pop Art", "Futurismo"],
+        question: "¿Qué estilo artístico aparece mucho en el Museo del Prado?",
+        answers: ["Barroco", "Cubismo", "Pop Art", "Surrealismo"],
+        correct: 0
+      },
+      {
+        question: "¿Qué otro pintor famoso tiene obras en el Prado?",
+        answers: ["Dalí", "Goya", "Miró", "Zuloaga"],
         correct: 1
       }
     ];
